--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.5.4",
+    "json": "^9.0.6",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-cookies": "^1.5.12",
     "vue-router": "^3.0.1",
+    "vue2-ace-editor": "0.0.13",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
